# simd_sols

./: .gitignore  Cargo.toml  LICENSE  PERF.txt  README.md  config.toml  perf_all.sh  perf_out.txt
benches/: all.rs
input/: 100x.txt  10x.txt  ideal_1000x.txt  ideal_100x.txt  ideal_10x.txt  ideal_1x.txt
scripts/: gen_input.py  sol.py  walrus.py
src/: lib.rs  main.rs
src/sol/: default.rs  default_sse.rs  ideal_avx2.rs  mod.rs  relaxed.rs  relaxed_avx2.rs  relaxed_sse.rs
src/util/: mod.rs  parse.rs
tests/: mod.rs
